tiny fix for textarea

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </header>
     
     <main>
-        <textarea type="text" name="pastearea" id="pastearea" oninput='this.style.height = "";this.style.height = this.scrollHeight + -36 + "px"'></textarea>
+        <textarea type="text" name="pastearea" id="pastearea" oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea>
         <div class="copy-area-control-button-wrapper">
             <button>Clear</button>
         </div>
