--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <title>copyclick | paste and copy with a single click</title>
+
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
@@ -28,7 +32,8 @@
     </main>
 
     <footer>
-        (c) Steven Hernandez
+        <p>(c) Steven Hernandez</p>
     </footer>
+    <p style="position: absolute; bottom: 0; right: 0;font-size: .8rem;">v0.1</p>
 </body>
 </html>
